# bitwarden-to-keepass

./: .gitignore  CHANGELOG.md  LICENSE  README.md  convert.py  main.py  pyproject.toml  requirements.txt  setup.py  tests.py  update-requirements.sh
.github/workflows/: python-app.yml
bitwarden_to_keepass/: convert.py
lib/: .test_convert.py.swp  __init__.py  test_convert.py
resources/: test.json  test_duplicate.json  test_encrypted.json
test/: test.json  tests.py
test/resources/: test.json  test_duplicate.json  test_encrypted.json  test_no_folders.json  test_passkey.json  test_patch.json
