[tool.poetry]
name = "bitwarden_to_keepass"
version = "1.0.3"
description = "Convert BitWarden Vault into a KeePass Database (kdbx)"
authors = ["k3karthic <k3.karthic@gmail.com>", "Scott Hansen <firecat4153@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
bw2kp = "bitwarden_to_keepass.convert:main"

[tool.poetry.dependencies]
python = "^3.9"
pykeepass = "^4.0.4"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
