[project]
name = "bitwarden-to-keepass"
version = "1.0.7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pykeepass>=4.1.1.post1",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
]

[project.scripts]
bw2kp = "bitwarden_to_keepass.convert:main"

[tool.setuptools.packages.find]
include = ["bitwarden_to_keepass*"]